--- a/e-stock/package.json
+++ b/e-stock/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
